<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="search_icon">Icône de recherche</string>
    <string name="menu_button_description">Icône du menu</string>
    <string name="add_property_type">Type</string>
    <string name="add_property_price">Prix</string>
    <string name="add_property_surface">Surface</string>
    <string name="add_property_rooms">Chambres</string>
    <string name="add_property_desc">Description</string>
    <string name="add_property_photos">Ajouter des photos +</string>
    <string name="add_property_address">Addresse</string>
    <string name="add_property_date">Ajouté le</string>
    <string name="apartment">Appartement</string>
    <string name="house">Maison</string>
    <string name="loft">Loft</string>
    <string name="studio">Studio</string>
    <string name="mansion">Manoir</string>
    <string name="indeterminate">Indéterminé</string>
    <string name="add_property_btn">Ajouter ce bien</string>
    <string name="add_property_proximity">Lieux proches</string>
    <string name="add_property_status">Status</string>
    <string name="property_status">status of the property</string>
    <string name="add_property_status_date">le</string>
    <string name="desc_editText">Tapez votre description ici…</string>
    <string name="proximity_place">Lieux proches</string>
    <string name="college">Collège</string>
    <string name="high_school">Lycée</string>
    <string name="primary">Ecole primaire</string>
    <string name="nursery">Garderie</string>
    <string name="supermarket">Grande Surface</string>
    <string name="shops">Magasins</string>
    <string name="parc">Parc</string>
    <string name="sea">La mer</string>
    <string name="activities">Activitées(piscine, cinema…)</string>
    <string name="already_selected_proximity_place">Vous avez déjà séléctionner ce lieu</string>
    <string name="real_estate_agent">Agent immobilier</string>
    <string name="success_add_property">Bien ajouté avec succès !</string>
    <string name="failed_add_property">Votre bien n\'a pas pu être ajouté</string>
    <string name="photos_of_the_property">Photos du bien</string>
    <string name="next_photo_button">Flèche pour passer à la  prochaine photo</string>
    <string name="for_sale">Fente</string>
    <string name="back_main_activity_button">Retour à la page d\'accueil</string>
    <string name="pool">Piscine</string>
    <string name="cinema">Cinema</string>
    <string name="restaurants">Restaurants</string>
    <string name="add_property_title">Ajouter un bien</string>
    <string name="property_map">Carte des biens</string>
    <string name="location_permission">Autoriser la localisation dans vos paramètre pour apparaitre sur la carte !</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="property_type">Un type de bien en particulier ?</string>
    <string name="photos">Photos</string>
    <string name="min_photos_number">Un nombre de photos minimum ?</string>
    <string name="for_sale_or_not">En vente ou vendu ?</string>
    <string name="proximity_places">Lieux à proximité</string>
    <string name="proximity_places_filter">Des lieux indispensables ?</string>
    <string name="show_filters">Montrer les filtres</string>
    <string name="research_filter">Filtrer vos recherches</string>
    <string name="send">Envoyer</string>
    <string name="filter">Filtrer</string>
    <string name="since">depuis le </string>
    <string name="rooms">chambre(s)</string>
    <string name="photos_choice_gallery">Choisir depuis votre gallery</string>
    <string name="photos_choice_camera">Prendre une photo</string>
    <string name="cancel">Annuler</string>
    <string name="add_photos_title">Ajouter des photos</string>
    <string name="custom_view_image_property">image customizer des biens</string>
    <string name="enter_photo_name">Entrer un nom pour la photo</string>
    <string name="photo_name">Nom de la pièce ?</string>
    <string name="add">Ajouter</string>
    <string name="simulator">Simulateur immobilier</string>
    <string name="settings">Paramètre</string>
    <string name="convert_currency"><![CDATA[Euro <-> USD]]></string>
    <string name="convert_currency_success">Devise modifié avec succès !</string>
    <string name="contribution">Contribution</string>
    <string name="duration">Durée (en années)</string>
    <string name="rate">Taux (en %)</string>
    <string name="simulate">Simuler</string>
    <string name="result">Resultat</string>
    <string name="monthly_payment">"Vous aurez à payer par mois: "</string>
    <string name="simulator_result_first_part">"Vous aurez à payer un total de "</string>
    <string name="simulator_result_second_part">dont</string>
    <string name="simulator_result_third_part">par mois !</string>
    <string name="amount">Montant</string>
    <string name="chose_money">Choisissez une devise</string>
    <string name="property_photos">Photos de la propriété</string>
    <string name="action_map">Carte</string>
    <string name="action_add_property">Ajouter un bien</string>
    <string name="action_show_settings">Parametres</string>
    <string name="action_back">Retourner à l\'accueil</string>
    <string name="reset_filters">Réinitialiser les filtres</string>
    <string name="photo_name_editText">Donner un nom à cette photo</string>
    <string name="validate">valider</string>
    <string name="permission_denied">Permission refusé</string>
    <string name="no_property_alert">Pas de biens en ventes, \n Ajouter en un vous-même !</string>
    <string name="create_property">Créer un bien</string>
    <string name="empty_fields_error_msg">Veuillez remplir tout les champs avant de valider !</string>
    <string name="storage_permission_denied">Veuillez autoriser l\'accès à vos photos !</string>
    <string name="camera_permission_denied">Veuillez autoriser l\'accès à votre camera pour prendre une photo !</string>
    <string name="name_photo">Nom de la photo</string>
    <string name="modify_data_icon">Icône de modification d\'une propriété</string>
    <string name="property_sold_btn">Marquer ce bien comme vendu</string>
    <string name="property_sold_date">Indiquez la date de la vente \n (JJ/MM/AAAA)</string>
    <string name="sold">Vendu</string>
    <string name="on_the">le</string>
    <string name="add_proximity_place_hint">Ajouter un lieu…</string>
    <string name="new_chip_desc">Bouton pour ajouter un nouveau lieu</string>
</resources>
