...
                android:background="@color/grayedText"
                android:contentDescription="@string/menu_button_description"
                android:padding="12dp"
                android:src="@drawable/icon_euro" />

            <ImageButton
                android:id="@+id/simulator_dollar_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/thirdPurple"
                android:contentDescription="@string/menu_button_description"
                android:padding="10dp"
...
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp">

            <EditText
                android:id="@+id/simulator_amount_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter contribution"
                android:background="@color/primaryPurple"
                android:drawableStart="@drawable/icon_money"
                android:drawablePadding="-20dp"
...
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp">

            <EditText
                android:id="@+id/simulator_contribution_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter contribution"
                android:background="@color/primaryPurple"
                android:drawableStart="@drawable/icon_payment"
                android:drawablePadding="-20dp"
...
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp">

            <EditText
                android:id="@+id/simulator_rate_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter rate"
                android:background="@color/primaryPurple"
                android:drawableStart="@drawable/icon_rate"
                android:drawablePadding="-20dp"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp">

            <EditText
                android:id="@+id/simulator_duration_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="Enter duration"
                android:background="@color/primaryPurple"
                android:drawableStart="@drawable/icon_duration"
                android:drawablePadding="-20dp"
...

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/simulator_simulate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
...
        android:layout_margin="30dp"
        android:visibility="gone"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <TextView
            android:id="@+id/simulator_result_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:text="@string/result"
            android:textAlignment="center"
            android:textAllCaps="false"
...
