<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.DetailsFragment">

...
        android:background="@android:color/transparent"
        android:gravity="top"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <ImageButton
            android:id="@+id/arrow_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_main_activity_button"
            android:src="@drawable/icon_purple_arrow_back" />

...
                    android:src="@drawable/icon_check_purple"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:id="@+id/details_property_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_property_desc"
                android:textColor="@color/secondaryPurple"
                android:textSize="14sp" />
...
                                android:src="@drawable/icon_check"
                                android:visibility="gone" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/details_property_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/add_property_price"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
...
