...
                app:backgroundTintMode="add"
                app:icon="@drawable/icon_desc"
                app:iconGravity="start"
                app:iconPadding="0dp" />

            <EditText
                android:id="@+id/add_property_desc_editText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:autofillHints="desc editText"
                android:background="@color/white"
                android:gravity="bottom"
...
                android:layout_margin="5dp"
                app:chipSpacing="3dp"
                app:chipSpacingVertical="-5dp"
                app:singleLine="false" />

            <EditText
                android:id="@+id/add_property_realEstate_agent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="input"
                android:layout_marginTop="10dp"
                android:background="@drawable/bottom_border"
                android:drawableStart="@drawable/icon_real_estate_agent"
...
                android:textColor="@color/white"
                android:textColorHint="@color/grayedText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <fragment
                android:id="@+id/autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <fragment
...
